[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "django-fhadmin"
description = "Modifies the stock Django-Administration interface to fit our ideas a little bit better."
readme = "README.rst"
license = "BSD-3-Clause"
license-files = [ "LICENSE" ]
authors = [
  { name = "Matthias Kestenholz", email = "mk@feinheit.ch" },
]
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "django>=3.2",
]
optional-dependencies.tests = [
  "coverage",
]
urls.Homepage = "http://github.com/feinheit/django-fhadmin/"

[tool.hatch]
version.path = "fhadmin/__init__.py"
build.targets.wheel.packages = [ "fhadmin" ]

[tool.coverage]
run.branch = true
run.include = [
  "*fhadmin*",
  "*testapp*",
]
run.omit = [
  "*.tox*",
  "*migrations*",
]
