[metadata]
name = django_fhadmin
version = attr: fhadmin.__version__
description = Modifies the stock Django-Administration interface to fit our ideas a little bit better.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://github.com/feinheit/django-fhadmin/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = BSD-3-Clause
license_file = LICENSE
platforms = OS Independent
classifiers =
    License :: OSI Approved :: BSD License

[options]
packages = find:
include_package_data = True
