[metadata]
name = django_fhadmin
version = attr: fhadmin.__version__
description = Modifies the stock Django-Administration interface to fit our ideas a little bit better.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://github.com/feinheit/django-fhadmin/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = BSD-3-Clause
license_file = LICENSE
platforms = OS Independent
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    Django>=3.2
python_requires = >=3.9
include_package_data = True

[options.extras_require]
tests =
    coverage

[options.packages.find]
exclude =
    tests
    tests.*

[coverage:run]
branch = True
include =
    *fhadmin*
omit =
    *migrations*
    *tests*
    *.tox*
